# nondominium

./: .gitignore  .gitmodules  .rules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  REVIEW.md  book.toml  commit_message_current.txt  flake.nix  index.html  interfacer_architecture_analysis.md  interfacer_comprehensive_analysis_report.md  linkedin-profile-optimization.md  package-lock.json  package.json  specifications.md
.claude/: settings.json
.claude/hooks/: LoadProjectDocs.hook.ts
.claude/skills/: README.md  SKILL.md
.claude/skills/dna-dev/assets/zome_template/coordinator/zome_template/: Cargo.toml
.claude/skills/dna-dev/assets/zome_template/coordinator/zome_template/src/: template.rs
.claude/skills/dna-dev/assets/zome_template/integrity/zome_template/: Cargo.toml
.cursor/commands/: pr-review.mdc
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md
.github/workflows/: build.yml  docs.yml
.serena/: project.yml
.serena/memories/: artist_network_user_stories_creation_session_2025.md  capability_sharing_implementation.md  capability_sharing_reflection_analysis.md  capability_tokens_research_2025.md  checkpoint_2025-12-11_current_state.md  device_deactivation_fix_session_2025.md  device_foundation_test_fixes_session_2025.md  device_management_complete_context_2025.md  device_management_context_analysis_2025.md  getMyDevices_bug_fix_success_2025.md  hREA_integration_strategy_discovery_2025.md  multi_device_integration_test_analysis_2025.md  person_centric_architecture_implementation_2025.md  person_centric_link_strategy_complete_plan_2025.md  person_private_data_test_fixes.md  person_test_enhancement_requirements_2025.md  person_test_fixes_session_2025_01_08.md  person_zome_comprehensive_analysis_2025.md  person_zome_context_loaded_2025.md  private_data_sharing_cleanup_session_2025.md  resource-zome-learnings.md  resource-zome-refactoring-session.md  resource_specifications_requirements_analysis_2025.md  resource_zome_analysis_2026_01_13.md  resource_zome_context_loaded_session_2025.md  reusable_patterns_nondominium.md  session-summary-2025-11-23.md  session_architecture_analysis_2025-12-11.md  session_holochain_skill_update_2025.md  session_multidevice_bug_fix_complete_2025.md  test_fixes_completed_session.md
.specify/memory/: constitution.md
.zed/: settings.json
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
crates/shared/: Cargo.toml
crates/shared/src/: errors.rs  lib.rs  paths.rs  types.rs
crates/shared/src/io/: governance.rs  lobby.rs  mod.rs
crates/utils/: Cargo.toml
dnas/group/tests/: Cargo.toml
dnas/group/tests/src/common/: conductors.rs  mod.rs
dnas/group/tests/src/group/: mod.rs
dnas/group/zomes/coordinator/zome_group/: Cargo.toml
dnas/group/zomes/coordinator/zome_group/src/: group_profile.rs  lib.rs  membership.rs  soft_link.rs  work_log.rs
dnas/lobby/zomes/coordinator/zome_lobby_coordinator/: Cargo.toml
dnas/lobby/zomes/coordinator/zome_lobby_coordinator/src/: lib.rs
dnas/nondominium/tests/: Cargo.toml
dnas/nondominium/tests/src/: lib.rs
dnas/nondominium/tests/src/common/: conductors.rs  fixtures.rs  mirrors.rs  mod.rs  zome_calls.rs
dnas/nondominium/tests/src/governance/: foundation.rs  mod.rs
dnas/nondominium/tests/src/governance/ppr/: cryptography.rs  debug.rs  foundation.rs  integration.rs  mod.rs  scenarios.rs
dnas/nondominium/tests/src/misc/: mod.rs
dnas/nondominium/tests/src/nondominium/: mod.rs
dnas/nondominium/tests/src/nondominium/ndo_layer0/: mod.rs
dnas/nondominium/tests/src/person/: capability_sharing.rs  device_foundation.rs  device_integration.rs  device_multi.rs  device_security.rs  foundation.rs  hrea_bridge.rs  integration.rs  mod.rs  scenarios.rs
dnas/nondominium/tests/src/resource/: foundation.rs  integration.rs  mod.rs  scenarios.rs  update.rs
dnas/nondominium/zomes/coordinator/zome_person/: Cargo.toml
dnas/nondominium/zomes/coordinator/zome_person/src/: audit_and_notifications.rs  capability_based_sharing.rs  device_management.rs  hrea_bridge.rs  lib.rs  person.rs  private_data.rs  private_data_sharing.rs  role.rs
documentation/: API_REFERENCE.md  ARCHITECTURE_COMPONENTS.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_STATUS.md  README.md  SUMMARY.md  TELOS.md  TEST_COMMANDS.md  Testing_Infrastructure.md  UPDATE_PLAN.md  VfAction_Usage.md  development-report.md  governance.md  hREA-integration-strategy.md  hREA-strategic-roadmap.md  hrea-valueflows-1.0-compliance.md  implementation_plan.md  pai  requirements.md  specifications.md  ui_architecture.md
documentation/Applications/: Artcoin Main doc.md  Nondominium_Artcoin.md  artcoin_main_doc.md  digitaldairychain.md  distributed_journalism.md  erp_holochain_bridge.md  healthnet.md  nondominium_artcoin.md  regen_farming.md  strategic_development.md
documentation/TELOS/: ARCHITECTURE.md  BELIEFS.md  CHALLENGES.md  GLOSSARY.md  GOALS.md  LEARNED.md  MISSION.md  STRATEGIES.md  TELOS.md
documentation/archives/: IMPLEMENTATION_STATUS.md  P2PMODELS_COMPARISON_REPORT.md  agent.md  complexity_oriented_programming.md  digital_fabrics_concept_definition_2025-10-28.md  fractal-composable-resource-architecture.md  governance.md  holochain-storage-verification-patterns.md  implementation_plan.md  nondominium_mutualization.md  resources.md
documentation/governance/: PPR_Security_Implementation.md  governance.md  private-participation-receipt.md
documentation/hREA/: README.md  integration-strategy.md  strategic-roadmap.md  valueflows-1.0-compliance.md
documentation/implementation/: README.md  ui-implementation-status.md
documentation/requirements/: agent.md  governance.md  (+13 more)
nix/: agent-skills.nix  cursor-pai.nix
pai/: README.md  conventions.md  nondominium.code-workspace
tests/: DEPRECATED.md  README.md  eslint.config.js  package.json  tsconfig.json  types.d.ts
ui/: .prettierrc  package.json  svelte.config.js  tailwind.config.js  uno.config.ts  vite.config.ts  vitest.config.ts
workdir/: happ.yaml  moss.yaml  web-happ.yaml
(+286 files in other folders)
