[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = [
    "dnas/*/zomes/coordinator/*",
    "dnas/*/zomes/integrity/*",
    "dnas/nondominium/zomes/coordinator/zome_person",
    "dnas/nondominium/zomes/integrity/zome_person",
    "dnas/nondominium/zomes/coordinator/zome_resource",
    "dnas/nondominium/zomes/integrity/zome_resource",
    "dnas/nondominium/zomes/coordinator/zome_gouvernance",
    "dnas/nondominium/zomes/integrity/zome_gouvernance",
    "crates/utils",
]
resolver = "2"

[workspace.dependencies]
hdi = "=0.6.3"
hdk = "=0.5.3"
holochain_serialized_bytes = "*"
serde = "1.0"
