[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = [
    "dnas/*/zomes/coordinator/*",
    "dnas/*/zomes/integrity/*",
    "dnas/nondominium/zomes/coordinator/zome_person",
    "dnas/nondominium/zomes/integrity/zome_person",
    "dnas/nondominium/zomes/coordinator/zome_resource",
    "dnas/nondominium/zomes/integrity/zome_resource",
    "dnas/nondominium/zomes/coordinator/zome_gouvernance",
    "dnas/nondominium/zomes/integrity/zome_gouvernance",
    "crates/utils",
    "dnas/nondominium/tests",
]
# default-members excludes the Sweettest crate so that
# `cargo build --target wasm32-unknown-unknown` only compiles WASM zomes.
# nondominium_sweettest has native-only deps (holochain, tokio, mio) that
# cannot compile to WASM.
default-members = [
    "dnas/nondominium/zomes/coordinator/zome_person",
    "dnas/nondominium/zomes/integrity/zome_person",
    "dnas/nondominium/zomes/coordinator/zome_resource",
    "dnas/nondominium/zomes/integrity/zome_resource",
    "dnas/nondominium/zomes/coordinator/zome_gouvernance",
    "dnas/nondominium/zomes/integrity/zome_gouvernance",
    "crates/utils",
]
resolver = "2"

[workspace.dependencies]
hdi = "^0.7.0"
hdk = "^0.6.0"
holochain_serialized_bytes = "*"
serde = "1.0"
thiserror = "2.0"
# Test-only deps (NOT compiled to WASM — only used by nondominium_sweettest)
holochain = { version = "=0.6.0", features = ["test_utils"] }
tokio = { version = "1", features = ["full"] }
