[package]
name = "nondominium_sweettest"
version = "0.1.0"
edition = "2021"

# This crate is NOT compiled to WASM. It uses the holochain test_utils feature
# to run Sweettest in-process against the compiled .dna bundles.
#
# IMPORTANT: Run with CARGO_TARGET_DIR=target/native-tests to avoid
# artifact conflicts with the wasm32-unknown-unknown build directory.
#
# Prerequisites: `bun run build:happ` must be run before `cargo test`

[dependencies]
holochain  = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = "1"
rmp-serde  = "1"
# holochain_serialized_bytes provides the SerializedBytes derive macro needed
# for mirror structs to work with Record::entry().to_app_option().
holochain_serialized_bytes = { workspace = true }

[[test]]
name = "misc"
path = "src/misc/mod.rs"

[[test]]
name = "person"
path = "src/person/mod.rs"

[[test]]
name = "resource"
path = "src/resource/mod.rs"

[[test]]
name = "governance"
path = "src/governance/mod.rs"
