[package]
name = "zome_lobby_coordinator"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "zome_lobby_coordinator"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
holochain_serialized_bytes = { workspace = true }
thiserror = { workspace = true }
zome_lobby_integrity = { path = "../../integrity/zome_lobby_integrity" }
